# casa_do_homebrew

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: django.yml
accounts/: urls.py  views.py
accounts/templates/: base.html
accounts/templates/registration/: login.html  password_reset_confirm.html
cartorio_de_registros/: apps.py  urls.py  views.py
cartorio_de_registros/templates/: base.html
cartorio_de_registros/templates/cartorio_de_registros/: password_reset_confirm.html  password_reset_form.html
casa_do_homebrew/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css
taverna_dos_pdfs/: apps.py  forms.py  models.py  urls.py  validator.py  views.py
taverna_dos_pdfs/templates/: base.html
taverna_dos_pdfs/templates/registration/: login.html
taverna_dos_pdfs/templates/taverna_dos_pdfs/: base.html  create_pdf.html  pdf_delete.html  pdf_list.html  pdf_update.html  pdf_view.html  register.html
templates/: base.html
templates/registration/: password_reset_complete.html  password_reset_done.html  password_reset_form.html  register_form.html
templates/taverna_dos_pdfs/: create_pdf.html
