[tool.poetry]
name = "casa_do_homebrew"
version = "0.1.0"
description = "Site para compartilhamento de conteúdo autoral de RPG"
authors = ["rafaelcnagy <rafaelcnagy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
mysqlclient = "^2.0.1"
django-vote = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
